Dossier_AirFLOW/logs/dag_id=my_training_dag/run_id=manual__2025-02-07T13:03:29.235547+00:00/task_id=task_train_model/attempt=1.log
[2025-02-07T13:03:48.396+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-02-07T13:03:48.404+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: my_training_dag.task_train_model manual__2025-02-07T13:03:29.235547+00:00 [queued]>
[2025-02-07T13:03:48.408+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: my_training_dag.task_train_model manual__2025-02-07T13:03:29.235547+00:00 [queued]>
[2025-02-07T13:03:48.408+0000] {taskinstance.py:2866} INFO - Starting attempt 1 of 1
[2025-02-07T13:03:48.416+0000] {taskinstance.py:2889} INFO - Executing <Task(BashOperator): task_train_model> on 2025-02-07 13:03:29.235547+00:00
[2025-02-07T13:03:48.420+0000] {standard_task_runner.py:72} INFO - Started process 708 to run task
[2025-02-07T13:03:48.422+0000] {standard_task_runner.py:104} INFO - Running: ['airflow', 'tasks', 'run', 'my_training_dag', 'task_train_model', 'manual__2025-02-07T13:03:29.235547+00:00', '--job-id', '623', '--raw', '--subdir', 'DAGS_FOLDER/training_dag.py', '--cfg-path', '/tmp/tmppwel3v21']
[2025-02-07T13:03:48.423+0000] {standard_task_runner.py:105} INFO - Job 623: Subtask task_train_model
[2025-02-07T13:03:48.449+0000] {task_command.py:467} INFO - Running <TaskInstance: my_training_dag.task_train_model manual__2025-02-07T13:03:29.235547+00:00 [running]> on host 87da8c46327c
[2025-02-07T13:03:48.487+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='my_training_dag' AIRFLOW_CTX_TASK_ID='task_train_model' AIRFLOW_CTX_EXECUTION_DATE='2025-02-07T13:03:29.235547+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-02-07T13:03:29.235547+00:00'
[2025-02-07T13:03:48.487+0000] {logging_mixin.py:190} INFO - Task instance is in running state
[2025-02-07T13:03:48.487+0000] {logging_mixin.py:190} INFO -  Previous state of the Task instance: queued
[2025-02-07T13:03:48.488+0000] {logging_mixin.py:190} INFO - Current task name:task_train_model state:running start_date:2025-02-07 13:03:48.404681+00:00
[2025-02-07T13:03:48.488+0000] {logging_mixin.py:190} INFO - Dag name:my_training_dag and current dag run status:running
[2025-02-07T13:03:48.488+0000] {taskinstance.py:731} INFO - ::endgroup::
[2025-02-07T13:03:48.488+0000] {subprocess.py:78} INFO - Tmp dir root location: /tmp
[2025-02-07T13:03:48.489+0000] {subprocess.py:88} INFO - Running command: ['/usr/bin/bash', '-c', 'python /root/airflow/train.py']
[2025-02-07T13:03:48.497+0000] {subprocess.py:99} INFO - Output:
[2025-02-07T13:03:48.504+0000] {subprocess.py:106} INFO -   File "/root/airflow/train.py", line 22
[2025-02-07T13:03:48.506+0000] {subprocess.py:106} INFO -     print(model.score(X, y))<
[2025-02-07T13:03:48.506+0000] {subprocess.py:106} INFO -                              ^
[2025-02-07T13:03:48.506+0000] {subprocess.py:106} INFO - SyntaxError: invalid syntax
[2025-02-07T13:03:48.506+0000] {subprocess.py:110} INFO - Command exited with return code 1
[2025-02-07T13:03:48.510+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-02-07T13:03:48.512+0000] {logging_mixin.py:190} INFO - Task instance in failure state
[2025-02-07T13:03:48.512+0000] {logging_mixin.py:190} INFO - Task start:2025-02-07 13:03:48.404681+00:00 end:2025-02-07 13:03:48.512232+00:00 duration:0.107551
[2025-02-07T13:03:48.512+0000] {logging_mixin.py:190} INFO - Task:<Task(BashOperator): task_train_model> dag:<DAG: my_training_dag> dagrun:<DagRun my_training_dag @ 2025-02-07 13:03:29.235547+00:00: manual__2025-02-07T13:03:29.235547+00:00, state:running, queued_at: 2025-02-07 13:03:29.320330+00:00. externally triggered: True>
[2025-02-07T13:03:48.512+0000] {logging_mixin.py:190} INFO - Failure caused by Bash command failed. The command returned a non-zero exit code 1.
[2025-02-07T13:03:48.513+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=my_training_dag, task_id=task_train_model, run_id=manual__2025-02-07T13:03:29.235547+00:00, execution_date=20250207T130329, start_date=20250207T130348, end_date=20250207T130348
[2025-02-07T13:03:48.520+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2025-02-07T13:03:48.521+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 623 for task task_train_model (Bash command failed. The command returned a non-zero exit code 1.; 708)
Traceback (most recent call last):
  File "/opt/conda/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/conda/lib/python3.12/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-02-07T13:03:48.525+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-02-07T13:03:48.532+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-02-07T13:03:48.532+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
